<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/autobus" />

    <EditText
        android:id="@+id/edt_num_pasajeros"
        android:layout_width="228dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="49dp"
        android:autofillHints="nada"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/num_pasajeros"
        android:inputType="number"
        android:padding="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sp_temporada"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/temporada"
        android:background="@color/white"
        android:contentDescription="@string/temporada"
        android:labelFor="@string/temporada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_num_pasajeros" />

    <RadioGroup
        android:id="@+id/rg_servicios"
        android:layout_width="378dp"
        android:layout_height="105dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_temporada">

        <RadioButton
            android:id="@+id/rb_servicios_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serviciosSI" />

        <RadioButton
            android:id="@+id/rb_servicios_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/serviciosNO" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#673AB7"
        android:text="@string/botonMostrar"
        app:layout_constraintBottom_toTopOf="@+id/txt_ganancias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_ganancias"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:background="@color/white"
        android:padding="8sp"
        android:text="@string/totalganancias"
        app:layout_constraintBottom_toTopOf="@+id/txt_perdidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_perdidas"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:padding="8sp"
        android:text="@string/totalperdidas"
        app:layout_constraintBottom_toTopOf="@+id/bt_siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>